Expanded on the open source projects

--- a/resume-no-phone.tex
+++ b/resume-no-phone.tex
@@ -235,7 +235,13 @@ forward, and parallel park.
 \interest
 {
 \begin{itemize}
-\item Programming, contributing to open source projects and computers
+\item Programming and computers
+\item Contributing to open source projects such as:
+  \begin{itemize}
+    \item Gravity programming language
+    \item Git Radar
+    \item Various Vim plugins
+  \end{itemize}
 \item Encryption
 \item Cryptocurrencies and blockchain
 \item Computer and information security
