--- a/resume-no-phone.tex
+++ b/resume-no-phone.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 
-\header{Steven}{Hall}{Software Engineering} % Your name and current job title/field
+\header{Steven}{Hall}{Software Engineer} % Your name and current job title/field
 
 %-------------------------------------------------------------------------------
 %  SIDEBAR SECTION
@@ -41,18 +41,17 @@
 Assembly (68k and 8052)
 Bash Script
 C/ C++
-HTML/ CSS/ JavaScript
-MySQL/ mongoDB
+HTML/ CSS
+JavaScript/ AJAX/ JQuery
+MySQL/ PostgreSQL
 Python
+PHP
 \section{Computers and Programs}
 Computer Repair
-Git
+Git/ SVN
 Linux (CLI proficient)
 Microsoft Windows
 Vim
-\section{Electronics}
-Microcontrollers
-Soldering
 \end{aside}
 
 %-------------------------------------------------------------------------------
@@ -62,6 +61,24 @@ Soldering
 
 \begin{entrylist}
 
+\entryFirstPage
+{April 2018--Present}
+{LinuxMagic Inc/\\
+ Wizard Tower TechnoServices Ltd. {\normalfont Full Stack Web Developer}}
+% {Vancouver, BC}
+{
+\begin{itemize}
+  \item Worked mostly on MagicMail (a carrier grade email platform for ISPs,
+    Telcos etc) including our webmail platforms and administrative interface.
+  \item Also worked on various internal tools such as our CRM and sales
+    system.
+  \item Completed work orders for customers such as Steve Nash Fitness World and
+    Métis Nation British Columbia which included communicating directly with
+    customers and developing enhancements to existing resources as well new
+    solutions.
+  \item Mentored new Web Developer hires.\\
+\end{itemize}
+}
 \entryFirstPage
 {May 2016--Aug 2016}
 {UBC {\normalfont Big Data Research Assistant}}
@@ -74,7 +91,7 @@ unified memory manager.\\
 }
 \entryFirstPage
 {Jan 2015--Aug 2015}
-{Ericsson {\normalfont Software Developer Co-op}}
+{Ericsson Canada Inc {\normalfont Software Developer Co-op}}
 % {Burnaby, BC}
 {
 \begin{itemize}
@@ -85,21 +102,21 @@ combination of manual router configurations and scripts for testing.
 routing during the testing and development phases.\\
 \end{itemize}
 }
-\entryFirstPage
-{Summer 2014}
-{ByteCom Computer Services {\normalfont Computer Repair Technician}}
-% {Surrey, BC}
-{
-\begin{itemize}
-\item Repaired broken, slow, and non-responsive computers in a computer repair
-shop by replicating the customer’s problem, identifying the cause of the
-problem, and repairing the problem with the tools we had, resulting in satisfied
-customers.
-\item Techniques used to repair the computers include file and registry
-manipulations, and taking the computers apart to diagnose hardware problems,
-resulting in faster, and better working computers.
-\end{itemize}
-}
+% \entryFirstPage
+% {Summer 2014}
+% {ByteCom Computer Services {\normalfont Computer Repair Technician}}
+% % {Surrey, BC}
+% {
+% \begin{itemize}
+% \item Repaired broken, slow, and non-responsive computers in a computer repair
+% shop by replicating the customer’s problem, identifying the cause of the
+% problem, and repairing the problem with the tools we had, resulting in satisfied
+% customers.
+% \item Techniques used to repair the computers include file and registry
+% manipulations, and taking the computers apart to diagnose hardware problems,
+% resulting in faster, and better working computers.
+% \end{itemize}
+% }
 \end{entrylist}
 
 %-------------------------------------------------------------------------------
@@ -136,6 +153,11 @@ end users.
 and prevent more livestock from getting sick.\\
 \end{itemize}
 }
+% \end{entrylist}
+
+% \newgeometry{top=1.5cm,bottom=1.5cm,right=1.5cm,left=1.5cm}
+
+% \begin{entrylist}
 \entryFirstPage
 {April 2014}
 {Electromagnetically Tethered Robot}
@@ -169,22 +191,22 @@ forward, and parallel park.
 %-------------------------------------------------------------------------------
 %  Volunteer Experience
 %-------------------------------------------------------------------------------
-\section{Volunteer Experience}
+% \section{Volunteer Experience}
 
-\begin{entrylist}
+% \begin{entrylist}
 
-\entry
-{2010--2013}
-{North Delta Baseball Association and Surrey Canadian Baseball Association {\normalfont Assistant Coach}}
-% {North Delta, BC and Surrey, BC}
-{
-\begin{itemize}
-\item Coached range of age groups over a three season period.
-\item Duties include teaching proper throwing and hitting mechanics, resulting
-  in increased performance by every player.
-\end{itemize}
-}
-\end{entrylist}
+% \entry
+% {2010--2013}
+% {North Delta Baseball Association and Surrey Canadian Baseball Association {\normalfont Assistant Coach}}
+% % {North Delta, BC and Surrey, BC}
+% {
+% \begin{itemize}
+% \item Coached range of age groups over a three season period.
+% \item Duties include teaching proper throwing and hitting mechanics, resulting
+%   in increased performance by every player.
+% \end{itemize}
+% }
+% \end{entrylist}
 
 %-------------------------------------------------------------------------------
 %  EDUCATION SECTION
@@ -313,6 +335,8 @@ active
 adaptable
 adapted
 administered
+teamwork
+review
 advertised
 advised
 advocated
@@ -328,6 +352,9 @@ appraised
 approved
 arranged
 assembled
+eager
+excited
+exciting
 assigned
 assisted
 assumed
